[package]
name = 'aoc2021'
authors = ['LJ Talbot <eljayt@protonmail.com>']
version = '0.1.0'
edition = '2021'
publish = false

[dependencies]
day1 = {path = './day1'}
day2 = {path = './day2'}
day3 = {path = './day3'}

[workspace]
members = ['day1', 'day2', 'day3', 'utility']

[profile.dev]
incremental = true
