[package]
name = 'aoc2021'
authors = ['LJ Talbot <eljayt@protonmail.com>']
version = '0.1.0'
edition = '2021'
publish = false

[dependencies]
day1 = {path = './day1'}
day2 = {path = './day2'}
day3 = {path = './day3'}
day4 = {path = './day4'}
day5 = {path = './day5'}

[workspace]
members = ['day1', 'day2', 'day3', 'day4', 'day5', 'utility']

[profile.dev]
incremental = true
