[package]
name = 'aoc2021'
authors = ['LJ Talbot <eljayt@protonmail.com>']
version = '0.1.0'
edition = '2021'
publish = false

[dependencies]
day1 = {path = './day1'}
day2 = {path = './day2'}
day3 = {path = './day3'}
day4 = {path = './day4'}
day5 = {path = './day5'}
day6 = {path = './day6'}
day7 = {path = './day7'}
day8 = {path = './day8'}

[workspace]
members = ['day1', 'day2', 'day3', 'day4', 'day5', 'day6', 'day7', 'day8', 'utility']

[profile.dev]
incremental = true
